# cs599-project

./: .env.example  .gitignore  LICENSE  README.md
src/backend/: .env.example  alembic.ini  pyproject.toml
src/backend/alembic/: env.py  script.py.mako
src/backend/alembic/versions/: 0001_initial_schema.py
src/backend/app/: __init__.py  main.py
src/backend/app/api/: assistant_graph.py  auth.py  calendar.py  completeness.py  files.py  gmail.py  health.py  memory.py  settings.py  workflow.py
src/backend/app/config/prompts/: calendar_agent.md  calendar_agent_tools.md  compose_response.md  context_agent.md  mail_agent.md  mail_agent_tools.md  response_agent.md  supervisor_agent.md  system_prompt.md  task_compiler.md
src/backend/app/core/: config.py  database.py  exceptions.py  logging.py  security.py
src/backend/app/graph/: __init__.py  builder.py  multi_nodes.py  nodes.py  observability.py  routes.py  runner.py  state.py  subgraphs.py  tasks.py  tools.py
src/backend/app/models/: base.py
src/backend/app/schemas/: __init__.py  assistant_graph.py  auth.py  calendar.py  completeness.py  files.py  gmail.py  health.py  memory.py  settings.py  workflow.py
src/backend/app/services/: calendar.py  completeness.py  draft_context.py  files.py  gmail.py  llm_client.py  memory.py  oauth.py  settings.py  workflow.py
src/backend/tests/: test_agent_tools.py
src/backend/tests/unit/: test_assistant_graph.py  test_calendar.py  test_completeness.py  test_files.py  test_gmail.py  test_health.py  test_logging_observability.py  test_memory.py  test_workflow.py
(+58 files in other folders)
