[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mailflow-agent-backend"
version = "0.1.0"
description = "FastAPI backend for the Mailflow Agent MVP"
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "pydantic-settings",
  "sqlalchemy",
  "aiosqlite",
  "alembic",
  "cryptography",
  "httpx",
  "python-multipart",
  "pypdf",
  "langchain",
  "langchain-openai",
  "langgraph",
  "langgraph-checkpoint-sqlite",
  "google-auth",
  "google-auth-oauthlib",
  "google-api-python-client",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-asyncio",
  "ruff",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"
